--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=notification
-server.port=8083
+server.port=8084
 
 
 #Conexao com o sistema de ms_perfil sincrono
-app.services.perfil.url=http://localhost:8080
+app.services.perfil.url=http://localhost:8082
 
 
 
@@ -16,26 +16,26 @@ spring.rabbitmq.addresses=amqps://thdrwxig:IW10e-P7n7u1VtlUIRzS_xKhkEaRyS06@beav
 # ----------------------------------------
 # 4. Configuracao do MySQL (ms_profile)
 # ----------------------------------------
-# spring.datasource.url=jdbc:mysql://localhost:3306/ms_profile
-# spring.datasource.username=root
-# spring.datasource.password=admin
-# spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+ spring.datasource.url=jdbc:mysql://localhost:3306/ms_profile
+ spring.datasource.username=root
+ spring.datasource.password=admin
+ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # # Configuracoes do JPA/Hibernate
-# spring.jpa.hibernate.ddl-auto=update
-# spring.jpa.show-sql=true
-# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+ spring.jpa.hibernate.ddl-auto=update
+ spring.jpa.show-sql=true
+ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 # ----------------------------------------
 # 5. Configuração da Conexão H2 (URL, Driver, Dialect)
 # ----------------------------------------
 
 # Tipo de conexão: in-memory (dados perdidos ao reiniciar)
-spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.url=jdbc:h2:mem:testdb
 # Nome de usuário e senha (opcional para in-memory, mas bom para prática)
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=password
+#spring.datasource.driverClassName=org.h2.Driver
 
 # Habilita o Hibernate a usar o dialeto H2
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
@@ -45,7 +45,7 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 # ----------------------------------------
 
 # Cria automaticamente as tabelas (create/update/none)
-spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=update
 
 # Habilita o console do H2 (Interface Web para visualizar os dados)
 spring.h2.console.enabled=true
